- Leerseite nach Inhaltsverzeichnis - teilmodell_kommentarverwaltung verkleinert um nicht in Lochbereich zu

--- a/trunk/docs/beleg1/teilbeleg1.tex
+++ b/trunk/docs/beleg1/teilbeleg1.tex
@@ -1,5 +1,6 @@
 \documentclass[a4paper,twoside]{scrreprt}
 
+\usepackage{german}
 \usepackage[ngerman]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{pslatex}
@@ -25,8 +26,8 @@
 \begin{document}
 \include{titel} % Titel des Dokuments mit Informationen aus meta
 \cleardoublepage
-% nur zum arbeiten
 \tableofcontents
+\cleardoublepage
 
 %Kapitel
 \input{funktionelle_anforderungen}
