Doppelt dicke Spaltenlinien in Weitere Datenflüsse entfernt

--- a/trunk/docs/beleg1/operationelle_anforderungen.tex
+++ b/trunk/docs/beleg1/operationelle_anforderungen.tex
@@ -114,7 +114,7 @@ Mitglieder & {Mitglied}  & $0*431$ & $50*431=21550$ & $100*431=43100$ \\
 \end{tabular}
 
 \subsection{Weitere Datenflüsse}
-\begin{tabular}[ht]{|l|p{4cm}||p{2cm}||p{2cm}||p{2cm}|}
+\begin{tabular}[ht]{|l|p{4cm}|p{2cm}|p{2cm}|p{2cm}|}
 \hline
 Datenfluss & Struktur & Minimum & Mittel & Maximum \\
 \hline\hline
