--- a/trunk/docs/beleg1/pspec_literaturinformation.tex
+++ b/trunk/docs/beleg1/pspec_literaturinformation.tex
@@ -63,7 +63,7 @@
 \begin{verbatim}
  BEGIN
    Finde in Bibliothek Literatur
-         mit Suchbegriff in Literatur
+         die Suchanfrage erfüllt
    
    IF gefunden THEN
      Setz Suchtreffer := gefundene_Literatur
