Lösche Autoren ohne Literatureintrag

--- a/trunk/docs/beleg1/pspec_bibliotheksverwaltung.tex
+++ b/trunk/docs/beleg1/pspec_bibliotheksverwaltung.tex
@@ -93,6 +93,8 @@
      Lösche in Kommentare Kommentar mit Kommentar.Literatur_Nr = 
                                         Literatur_Nr
 
+     Lösche in Autoren Autor mit Autor ohne Literatur
+
      Setze Bestätigung_Literaturlöschen
    ELSE
      Setze Fehler 103
