Flexibilität wurde geändert ....

--- a/trunk/docs/beleg1/qualitaetsanforderungen.tex
+++ b/trunk/docs/beleg1/qualitaetsanforderungen.tex
@@ -28,7 +28,7 @@ Diese \"Anderungen k\"onnen auch vom Administrator bereinigt werden.\\
 Sollte es wiederholt zu sch\"adigenden Eingriffen seitens eines Mitglieds kommen, so ist es dem Adminstrator möglich das betreffende Mitgliedskonto samt aller Mitgliedsdaten zu l\"oschen.
 
 \section{Flexibilität}
-Auch wenn zur Zeit keine Erweiterungen an der Literaturverwaltung geplant sind, ist es aufgrund der Sprache PHP dennoch m\"oglich \"Anderungen vorzunehmen.
+Bereits im Datenbankentwurf wurde auf sp\"atere Modifikationen des Projekts seitens des Kunden R\"ucksicht genommen. Es wurden Schnittstellen zum Datenbestand implementiert die sp\"atere \"Anderungen wesentlich erleichtern. \\
 
 \section{Portabilität}
 Aufgrund der frei verfügbaren und verbreiteten Software, die zum Betrieb der Software benötigt werden, kann die Software auf einer großen Reihe von Hard- und Softwarekombinationen genutzt werden. Eine Benutzung anderer Basissoftware ist nicht direkt möglich.
