--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -232,7 +232,13 @@ Bearbeiten/l"oschen oder Kommentare hinzuf"ugen/l"oschen.
 \includegraphics[scale=0.6]{litmod.png}
 
 Hier kann Literatur bearbeitet oder hinzugef"ugt werden. Die Art der Literatur ist "uber eine Selectbox ausw"ahlbar.
+Mehrere Autoren werden durch Kommata getrennt.
+\newpage
+\subsubsection{Erweiterte Suche}
+\includegraphics[scale=0.6]{searchmore.png}
 
+Der Benutzer kann wahlweise ueber das Formular ``Volltextsuche'' analog zu der Suche in der Navigation suchen, oder die Suche
+in dem Formluar ``Autoren- und Titelsuche'' auf Titel und/oder Autor beschraenken.
 \subsubsection{Suchergebnisse}
 \includegraphics[scale=0.6]{search.png}
 
