--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -237,8 +237,8 @@ Mehrere Autoren werden durch Kommata getrennt.
 \subsubsection{Erweiterte Suche}
 \includegraphics[scale=0.6]{searchmore.png}
 
-Der Benutzer kann wahlweise ueber das Formular ``Volltextsuche'' analog zu der Suche in der Navigation suchen, oder die Suche
-in dem Formluar ``Autoren- und Titelsuche'' auf Titel und/oder Autor beschraenken.
+Der Benutzer kann wahlweise "uber das Formular ``Volltextsuche'' analog zu der Suche in der Navigation suchen, oder die Suche
+in dem Formluar ``Autoren- und Titelsuche'' auf Titel und/oder Autor beschr"anken.
 \subsubsection{Suchergebnisse}
 \includegraphics[scale=0.6]{search.png}
 
