--- a/trunk/docs/beleg1/operationelle_anforderungen.tex
+++ b/trunk/docs/beleg1/operationelle_anforderungen.tex
@@ -19,7 +19,7 @@ Art & ['' Sachbuch'' | '' Zeitschrift '' | '' wissenschaftliche Arbeit '' | ''Le
 \hline
 Titel & Zeichenkette40 & $40$ \\
 \hline
-Jahr & gZahl *4stellig* & $2$\\
+Jahr & gZahl & $2$\\
 \hline
 Verlag & Zeichenkette40 & $40$ \\
 \hline
