--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -172,7 +172,7 @@ Bestätigung\_Mitgliedändern & Mitglieds\_Nr + Zeichenkette ''Änderung vorgeno
 \hline
 Bestätigung\_Mitgliedlöschen & Mitglieds\_Nr + Zeichenkette ''Löschen vorgenommen`` \\
 \hline
-Suchtreffer & \{Literatur\_Nr + Titel + Verlag + ISBN\}\\
+Suchtreffer & \{Literatur\_Nr + Titel + Autorname + Verlag + ISBN\}\\
 \hline
 Letzte\_Literatur & \{Literatur\_Nr + Titel + Autorname + Verlag + ISBN\}\\
 \hline
