--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -104,7 +104,7 @@ Stichworte & Zeichenkette100 \\
 
 \emph{Autoren} & \{Autor\} \\
 \hline
-Autor & @Autor\_Nr + \{Autorname} \\
+Autor & @Autor\_Nr + \{Autorname\} \\
 \hline
 Autor\_Nr & gZahl *6stellig, 000001 $\leq$ Autor\_Nr $\leq$ 999999* \\
 \hline
