--- a/trunk/docs/beleg1/operationelle_anforderungen.tex
+++ b/trunk/docs/beleg1/operationelle_anforderungen.tex
@@ -65,7 +65,7 @@ Rechte & [``Benutzer'' $\mid $``Administrator``] & $13$ \\
 
 Mitgliedsdaten & Name + Vorname + Login + Passwort + Rechte + E-Mail& $20 + 20 + 12 + 12 + 13 + 350 = 427 $\\
 \hline
-Literaturdaten & Art + Titel + Autorname + (Jahr) + (Verlag) + (ISBN) + (Beschreibung) + (Ort) + (Stichworte) & $24 + 40 + 40 + 2 + 40 + 20 + 250 + 40 + 100 = 556 $ \\
+Literaturdaten & Art + Titel + \{Autorname\} + (Jahr) + (Verlag) + (ISBN) + (Beschreibung) + (Ort) + (Stichworte) & $24 + 40 + 40 + 2 + 40 + 20 + 250 + 40 + 100 = 556 $ \\
 \hline
 Kommentardaten & Literatur\_Nr + Mitglieds\_Nr + Kommentartext & $4 + 4 + 4 = 12 $ \\
 \hline
@@ -98,9 +98,9 @@ Bestätigung\_Mitgliedlöschen & Mitglieds\_Nr + Zeichenkette ''Löschen vorgeno
 %\hline
 %Literatur\_Info & Literatur + Kommentare & $ 549 + 412 = 961 $ \textbf{KOMMENTARE = VIELE KOMMENTARE UND NICHT NUR EINER}\\
 \hline
-Suchtreffer & \{Literatur\_Nr + Titel + Autorname + Verlag + ISBN\} & $4 + 40 + 40 + 40 + 20 = 144$\\
+Suchtreffer & \{Literatur\_Nr + Titel + \{Autorname\} + Verlag + ISBN\} & $4 + 40 + 40 + 40 + 20 = 144$\\
 \hline
-Letzte\_Literatur & \{Literatur\_Nr + Titel + Autorname + Verlag + ISBN\} & $4 + 40 + 40 + 40 + 20 = 144$\\
+Letzte\_Literatur & \{Literatur\_Nr + Titel + \{Autorname\} + Verlag + ISBN\} & $4 + 40 + 40 + 40 + 20 = 144$\\
 \hline
 Mitgliederliste & \{Mitglieds\_Nr + Name + Vorname\} & $4 + 20 + 20 = 44 $\\
 \hline
@@ -125,8 +125,8 @@ Autoren & {Autor} & $1*44$ & $2*44=88$ & $5*44=220$ \\
 Datenfluss & Struktur & Minimum & Mittel & Maximum \\
 \hline\hline
 
-Suchtreffer & \{Literatur\_Nr + Titel + Autorname + Verlag + ISBN\}  & $0*104 + 0*40$ & $50*104 + 100*40=9200$ & $100*104 + 500*40=30400$ \\
-Letzte\_Literatur & \{Literatur\_Nr + Titel + Autorname + Verlag + ISBN\}  & $0*104 + 0*40$ & $50*104 + 100*40=9200$ & $100*104 + 500*40=30400$ \\
+Suchtreffer & \{Literatur\_Nr + Titel + \{Autorname\} + Verlag + ISBN\}  & $0*104 + 0*40$ & $50*104 + 100*40=9200$ & $100*104 + 500*40=30400$ \\
+Letzte\_Literatur & \{Literatur\_Nr + Titel + \{Autorname\} + Verlag + ISBN\}  & $0*104 + 0*40$ & $50*104 + 100*40=9200$ & $100*104 + 500*40=30400$ \\
 BibTeX-Datei & \{Datei im Bibtexformat\} & $0*1024$ & $50*1024=51200$ & $100*1024=102400$ \\
 Literatur\_Info & \{Literatur + Kommentare\} & $546 + 0*412=546$ & $546 + 100*412=41746$ & $546 + 200*412=82946$ \\
 \hline
