Erste Ideen für 2. Beleg mit Doxygen (Schriftgrößen stimmen noch nicht)

--- a/trunk/docs/beleg2/teilbeleg2.tex
+++ b/trunk/docs/beleg2/teilbeleg2.tex
@@ -1,3 +1,5 @@
+%TODO Größe der Überschriften anpassen (sonst unleserlich)
+
 \documentclass[a4paper,twoside]{scrreprt}
 
 \usepackage[ngerman]{babel}
