--- a/trunk/docs/beleg2/user.sty
+++ b/trunk/docs/beleg2/user.sty
@@ -1,14 +1,6 @@
+\RequirePackage{calc}
 % Nummer auch vor subsubsection anzeigen
-\setcounter{secnumdepth}{3}
-
-% Zeilenumbruch nach paragraph
-\makeatletter
-\renewcommand{\paragraph}{\@startsection{paragraph}{4}{\z@} 
-               {3.25ex \@plus1ex \@minus.2ex} %
-               {1.5ex \@plus .2ex} %
-               {\setlength{\parfillskip}{\z@ \@plus 1fil}%
-               \raggedsection\normalfont\sectfont\nobreak\size@paragraph\nobreak}}
-\makeatother 
+\setcounter{secnumdepth}{4}
 
 % Hilfsfunktion für Erkennenung der Erzeugung von PDF
 \newif\ifpdf 
@@ -25,3 +17,53 @@
     \fi
   \fi
 \fi
+
+
+%% Doxygen Stuff
+\renewcommand{\sectionmark}[1]{\markright{\thesection\ #1}}
+\newenvironment{CompactList}
+{\begin{list}{}{
+  \setlength{\leftmargin}{0.5cm}
+  \setlength{\itemsep}{0pt}
+  \setlength{\parsep}{0pt}
+  \setlength{\topsep}{0pt}
+  \renewcommand{\makelabel}{}}}
+{\end{list}}
+\newenvironment{CompactItemize}
+{
+  \begin{itemize}
+  \setlength{\itemsep}{-3pt}
+  \setlength{\parsep}{0pt}
+  \setlength{\topsep}{0pt}
+  \setlength{\partopsep}{0pt}
+}
+{\end{itemize}}
+\newcommand{\PBS}[1]{\let\temp=\\#1\let\\=\temp}
+\newlength{\tmplength}
+\newenvironment{TabularC}[1]
+{
+\setlength{\tmplength}
+     {\linewidth/(#1)-\tabcolsep*2-\arrayrulewidth*(#1+1)/(#1)}
+      \par\begin{tabular*}{\linewidth}
+             {*{#1}{|>{\PBS\raggedright\hspace{0pt}}p{\the\tmplength}}|}
+}
+{\end{tabular*}\par}
+\newcommand{\entrylabel}[1]{
+   {\parbox[b]{\labelwidth-4pt}{\makebox[0pt][l]{\textbf{#1}}\\}}}
+\newenvironment{Desc}
+{\begin{list}{}
+  {
+    \settowidth{\labelwidth}{40pt}
+    \setlength{\leftmargin}{\labelwidth}
+    \setlength{\parsep}{0pt}
+    \setlength{\itemsep}{-4pt}
+    \renewcommand{\makelabel}{\entrylabel}
+  }
+}
+{\end{list}}
+\newenvironment{Indent}
+  {\begin{list}{}{\setlength{\leftmargin}{0.5cm}}
+      \item[]\ignorespaces}
+  {\unskip\end{list}}
+\sloppy
+\addtocounter{secnumdepth}{1}
