- Anpassung der Überschriften für BibTeX - Einführen von Hyperlinks in PDF - kleinere Tests zur LaTeX-Ausgabe von Doxygen

--- a/trunk/docs/beleg2/teilbeleg2.tex
+++ b/trunk/docs/beleg2/teilbeleg2.tex
@@ -1,6 +1,6 @@
 %TODO Größe der Überschriften anpassen (sonst unleserlich)
 
-\documentclass[a4paper,twoside]{scrreprt}
+\documentclass[a4paper,twoside,bigheadings]{scrreprt}
 
 \usepackage[ngerman]{babel}
 \usepackage[utf8]{inputenc}
