--- a/trunk/docs/beleg2/user.sty
+++ b/trunk/docs/beleg2/user.sty
@@ -19,6 +19,11 @@
 \fi
 
 
+% Anpassung der Überschriften
+\setkomafont{subsubsection}{\bfseries\normalcolor\sffamily\large} 
+\setkomafont{paragraph}{\bfseries\normalcolor\sffamily\large} 
+
+
 %% Doxygen Stuff
 \renewcommand{\sectionmark}[1]{\markright{\thesection\ #1}}
 \newenvironment{CompactList}
