- Hinzufügen leerer Klassen für Klassenspezifikation - Import einfacher MySQL-Wrapper

--- a/trunk/docs/beleg2/klassenspezifikation.tex
+++ b/trunk/docs/beleg2/klassenspezifikation.tex
@@ -1,2 +1,8 @@
 \section{Klassenspezifikation}
-\input{doxygen/classBibTeX}
+\input{doxygen/classAutor}
+\input{doxygen/classKommentar}
+\input{doxygen/classLiteratur}
+\input{doxygen/classLogin}
+\input{doxygen/classMitglied}
+\input{doxygen/classSuche}
+\input{doxygen/classSQLDB}
