--- a/trunk/docs/beleg2/user.sty
+++ b/trunk/docs/beleg2/user.sty
@@ -20,6 +20,9 @@
 
 
 % Anpassung der Überschriften
+\setkomafont{chapter}{\bfseries\normalcolor\sffamily\Huge} 
+\setkomafont{section}{\bfseries\normalcolor\sffamily\huge} 
+\setkomafont{subsection}{\bfseries\normalcolor\sffamily\Large} 
 \setkomafont{subsubsection}{\bfseries\normalcolor\sffamily\large} 
 \setkomafont{paragraph}{\bfseries\normalcolor\sffamily\large} 
 
