--- a/trunk/docs/beleg1/teilbeleg1.tex
+++ b/trunk/docs/beleg1/teilbeleg1.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,twoside]{scrreprt}
+\documentclass[a4paper]{scrreprt}
 
 \usepackage[ngerman]{babel}
 \usepackage[utf8]{inputenc}
